# lib

./: .gitignore  0  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.sample  Client.cpp  FileStore.json  FileStore.xml  FileStqore.xml  Library.cpp  a.out  client  core  server  xml.cpp
client_src/: client.cpp  client.h  client_tcp.cpp  client_tcp.h  client_udp.cpp  client_udp.h  main.cpp  string_queue.h
src/: author.cpp  book.cpp  file_storage.cpp  file_storage.h  json_parser.cpp  json_parser.h  library.cpp  library.h  main.cpp  parser.h  result.h  result_code.h  server.cpp  server.h  server_status.h  server_tcp.cpp  server_tcp.h  server_udp.cpp  server_udp.h  storage.h  storage_data.h  xml_parser.cpp  xml_parser.h
src/client/: client.cpp  client.h  main.cpp  string_queue.cpp  string_queue.h
src/lib/: address.h  author.cpp  author.h  book.h  file_storage.cpp  file_storage.h  json_parser.h  message.h  protocol.h  result.h  result_code.h  socket.h  socket_tcp.cpp  socket_tcp.h  socket_udp.cpp  socket_udp.h  storage.h  storage_data.h  xml_parser.cpp
src/server/: main.cpp  server.cpp  server.h  server_command.h  server_status.h  server_udp.cpp  server_udp.h
